force-app/main/default/objects/Application__c/fields/Employer_Apt_Suite_Number__c.field-meta.xml
<CustomField>
    <fullName>Employer_Apt_Suite_Number__c</fullName>
    <label>Employer Apt/Suite Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>