force-app/main/default/objects/Application__c/fields/Employer_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Employer_Postal_Code__c</fullName>
    <label>Employer Postal Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>