force-app/main/default/objects/Application__c/fields/Employer_State__c.field-meta.xml
<CustomField>
    <fullName>Employer_State__c</fullName>
    <label>Employer State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>