force-app/main/default/objects/Application__c/fields/Previous_University__c.field-meta.xml
<CustomField>
    <fullName>Previous_University__c</fullName>
    <label>Previous University</label>
    <length>255</length>
    <type>Text</type>
</CustomField>