force-app/main/default/objects/Application__c/fields/Previous_University_Apt_Suite_Number__c.field-meta.xml
<CustomField>
    <fullName>Previous_University_Apt_Suite_Number__c</fullName>
    <label>Previous University Apt/Suite Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>