force-app/main/default/objects/Application__c/fields/Previous_University_City__c.field-meta.xml
<CustomField>
    <fullName>Previous_University_City__c</fullName>
    <label>Previous University City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>