force-app/main/default/objects/Application__c/fields/Previous_University_GPA__c.field-meta.xml
<CustomField>
    <fullName>Previous_University_GPA__c</fullName>
    <label>Previous University GPA</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>