force-app/main/default/objects/Application__c/fields/Previous_University_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Previous_University_Postal_Code__c</fullName>
    <label>Previous University Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>