force-app/main/default/objects/Application__c/fields/Previous_University_State__c.field-meta.xml
<CustomField>
    <fullName>Previous_University_State__c</fullName>
    <label>Previous University State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>