force-app/main/default/objects/Application__c/fields/Previous_University_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Previous_University_Street_Address__c</fullName>
    <label>Previous University Street Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>