force-app/main/default/objects/Application__c/fields/Work_Description__c.field-meta.xml
<CustomField>
    <fullName>Work_Description__c</fullName>
    <label>Work Description</label>
    <type>TextArea</type>
</CustomField>